--- a/app/src/main/res/layout/layout_floating_view.xml
+++ b/app/src/main/res/layout/layout_floating_view.xml
@@ -9,10 +9,11 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@android:color/darker_gray"
+        android:layout_marginBottom="4dp"
+        android:background="@drawable/background_hint_text"
         android:gravity="center"
         android:padding="8dp"
-        android:text="Long hint text."
+        android:text="Floating View hint text"
         android:textColor="@android:color/black"
         />
 
@@ -21,7 +22,7 @@
         android:layout_width="16dp"
         android:layout_height="16dp"
         android:layout_gravity="center_horizontal"
-        android:background="@android:color/holo_red_dark"
+        android:background="@drawable/ic_pointer"
         />
 
 </LinearLayout>
